--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -1,10 +1,12 @@
 ﻿/* wwwroot/app.css */
 @unocss;
 
-html, body {
+html, body, #app {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #blazor-error-ui {
