--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -1,17 +1,28 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+<main class="flex flex-col bg-white w-full h-full">
+    <div class="h-10 bg-red flex">
+        <div class="flex-1 w-0"></div>
+        <div class="window-commands flex items-start self-start">
+            <button onclick="@(()=>MinSize())">
+                <svg t="1725699325480" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5510"><path d="M74.752 480.256h874.496c21.504 0 31.744 10.752 32.256 32.256 0 21.504-10.752 32.256-32.256 32.256H74.752c-21.504 0-32.256-10.752-32.256-32.256 0-22.016 10.752-32.256 32.256-32.256z" p-id="5511"></path></svg>
+            </button>
+            <button onclick="@(()=>MaxSize())">
+                @if (_windowState == System.Windows.WindowState.Maximized)
+                {
+                    <svg t="1725699313725" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5342"><path d="M704 320v554.496H149.504V320h554.496m0.512-64H148.48c-34.816 0-63.488 28.16-63.488 63.488V875.52c0 34.816 28.16 63.488 63.488 63.488h556.032c34.816 0 63.488-28.16 63.488-63.488V319.488c0-35.328-28.16-63.488-63.488-63.488z m171.52-170.496H318.976c-34.816 0-62.464 28.16-62.976 62.464v65.024h64V149.504h554.496v554.496h-64V768H875.52c34.816 0 62.464-28.16 62.976-62.976V147.968c0-34.304-28.16-62.464-62.464-62.464z" p-id="5343"></path></svg>
+                }
+                else
+                {
+                    <svg t="1725698943204" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5176"><path d="M936.8 87.2V936H87.2V87.2h849.6m4.8-79.2H81.6C40.8 8 8 40.8 8 81.6v860c0 40.8 32.8 73.6 73.6 73.6h860c40.8 0 73.6-32.8 73.6-73.6V82.4c0.8-41.6-32-74.4-73.6-74.4 0.8 0 0 0 0 0z" p-id="5177"></path></svg>
+                }
+            </button>
+            <button onclick="@(()=>Close())">
+                <svg t="1725699344021" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5678"><path d="M578.36284173 512l422.30899284-422.30899284c18.09895683-18.09895683 18.09895683-48.2638849 0-66.36284173-18.09895683-18.09895683-48.2638849-18.09895683-66.36284173 0l-422.30899284 422.30899284-422.30899284-422.30899284c-18.09895683-18.09895683-48.2638849-18.09895683-66.36284173 0-18.09895683 18.09895683-18.09895683 48.2638849 0 66.36284173l422.30899284 422.30899284-422.30899284 422.30899284c-18.09895683 18.09895683-18.09895683 48.2638849 0 66.36284173 18.09895683 18.09895683 48.2638849 18.09895683 66.36284173 0l422.30899284-422.30899284 422.30899284 422.30899284c18.09895683 18.09895683 48.2638849 18.09895683 66.36284173 0 18.09895683-18.09895683 18.09895683-48.2638849 0-66.36284173l-422.30899284-422.30899284z" p-id="5679"></path></svg>
+            </button>
         </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+    </div>
+    <article class="flex-1 h-0">
+        @Body
+    </article>
+</main>
